# causal-stuff

./: .gitignore  CLAUDE.md  README.md  description.md  pyproject.toml
datasets/: __init__.py  card.py  lalonde.py
methods/: __init__.py  matching.py
notebooks/: 01_dowhy_lalonde_psm.ipynb  02_lalonde_covariate_matching.ipynb  03_lalonde_metalearners.ipynb  04_lalonde_dag_falsification.ipynb  05b_lalonde_dowhy_mahalanobis.ipynb
notebooks/card_proximity/: 01_card_dag_falsification_iv.ipynb  01_dag_definition.py  02_gcm_imputation.py  DOWHY_BUGS.md  card_results.md
notebooks/lalonde/: 01_lalonde_psm.ipynb  02_lalonde_covariate_matching.ipynb  03_lalonde_metalearners.ipynb  04_lalonde_dag_falsification.ipynb  05_lalonde_dowhy_backdoor.ipynb  05b_lalonde_dowhy_mahalanobis.ipynb
utils/: whitening.py
