[project]
name = "causal-stuff"
version = "0.1.0"
description = "Testing causal inference frameworks with notebooks and scripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter",
    "dowhy>=0.14",
    "econml",
    "scikit-learn",
    "pandas",
    "geopandas",
    "matplotlib",
    "seaborn",
    "causalml",
    "causal-learn",
    "lightgbm>=4.6.0",
    "networkx"
]
